--- a/source/less/blocks/customer.less
+++ b/source/less/blocks/customer.less
@@ -1,8 +1,14 @@
 .customer {
+  width: auto;
+  margin-top: 18px;
+  padding: 24px 19px 25px;
   border: none;
 }
 
 .customer__title {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
@@ -12,28 +18,166 @@
 }
 
 .customer__name {
+  width: auto;
+  height: 58px;
+  margin: 0;
+  padding: 0;
+  outline: 1px solid #142aa8;
+}
+
+.customer__name-letter {
+  width: 230px;
+  height: 58px;
+  margin: 0;
+  margin-right: 10px;
+  padding: 0;
+
   font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
   text-transform: uppercase;
-  color: #333333;
+  color: #000000;
+
+  outline: 1px solid #a81414;
+}
+
+.customer__name-wrap {
+  display: inline-block;
+  width: 227px;
+  height: 58px;
+  margin: 0;
+  padding: 0;
+  background-color: @gray;
+}
+
+.customer__name-holder {
+  width: 150px;
+  height: 58px;
+  margin: 0;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  padding: 0;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-align: left;
+  color: #000000;
+
+  background-color: @gray;
+  border: none;
+  cursor: pointer;
+  /*outline: 1px solid #14a84d;*/
 }
 
 .customer__surname {
+  width: auto;
+  height: 58px;
+  margin: 0;
+  margin-top: 17px;
+  padding: 0;
+  outline: 1px solid #142aa8;
+}
+
+.customer__surname-letter {
+  width: 230px;
+  height: 58px;
+  margin: 0;
+  margin-right: 10px;
+  padding: 0;
+
   font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
   text-transform: uppercase;
-  color: #333333;
+  color: #000000;
+
+  outline: 1px solid #a81414;
+}
+
+.customer__surname-wrap {
+  display: inline-block;
+  width: 100px;
+  height: 58px;
+  margin: 0;
+
+  padding: 0;
+  background-color: @gray;
+}
+
+.customer__surname-holder {
+  width: 170px;
+  height: 58px;
+  margin: 0;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  padding: 0;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-align: left;
+  color: #000000;
+
+  background-color: @gray;
+  border: none;
+  cursor: pointer;
+  /*outline: 1px solid #14a84d;*/
 }
 
 .customer__patronymic {
+  width: auto;
+  height: 58px;
+  margin: 0;
+  margin-top: 17px;
+  padding: 0;
+  outline: 1px solid #142aa8;
+}
+
+.customer__patronymic-letter {
+  width: 230px;
+  height: 58px;
+  margin: 0;
+  margin-right: 10px;
+  padding: 0;
+
   font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
   text-transform: uppercase;
-  color: #333333;
+  color: #000000;
+
+  outline: 1px solid #a81414;
+}
+
+.customer__patronymic-wrap {
+  display: inline-block;
+  width: 100px;
+  height: 58px;
+  margin: 0;
+
+  padding: 0;
+  background-color: @gray;
+}
+
+.customer__patronymic-holder {
+  width: 175px;
+  height: 58px;
+  margin: 0;
+  margin-left: 20px;
+  padding: 0;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-align: left;
+  color: #000000;
+
+  background-color: @gray;
+  border: none;
+  cursor: pointer;
+  outline: 1px solid #14a84d;
 }
