--- a/source/less/blocks/form-head.less
+++ b/source/less/blocks/form-head.less
@@ -3,6 +3,7 @@
   width: 320px;
   margin: 0;
   padding: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .form-head__picture {
@@ -25,6 +26,8 @@
 }
 
 .form-head__title {
+  margin-top: 37px;
+  margin-bottom: 27px;
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
@@ -34,8 +37,9 @@
 }
 
 .form-head__text {
+  margin-bottom: 17px;
   font-size: @little-font;
-  line-height: 26px;
+  line-height: 24px;
   text-align: center;
   text-transform: uppercase;
   color: #333333;
