--- a/source/less/blocks/back-sedona.less
+++ b/source/less/blocks/back-sedona.less
@@ -33,7 +33,7 @@
     position: relative;
     width: auto;
     height: 300px;
-    background-image: url("../img/bg-map-desktop@1x.jpg");
+    background-image: url("../img/bg-back-desktop@1x.jpg");
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/bg-back-desktop@2x.jpg");
