--- a/source/less/blocks/button-module1.less
+++ b/source/less/blocks/button-module1.less
@@ -1,7 +1,23 @@
 .button-module1 {
-  width:180px;
+  display: block;
+  margin: auto;
+  width: 180px;
+  height: 58px;
+  margin-top: 10px;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 58px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: @blue;
 }
 
 @media (min-width: @tablet-width) {
-  width: 272px;
+  .button-module1 {
+    width: 272px;
+    font-size: 21px;
+  }
 }
