--- a/source/less/blocks/button-module2.less
+++ b/source/less/blocks/button-module2.less
@@ -1,3 +1,22 @@
 .button-module2 {
-  width:280px;
+  display: block;
+  margin: auto;
+  width: 280px;
+  height: 58px;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 58px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: @blue;
+}
+
+@media (min-width: @tablet-width) {
+  .button-module2 {
+    width: 458px;
+    font-size: 21px;
+  }
 }
