--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -14,6 +14,19 @@
   background-color: @blue;
 }
 
+.button:hover {
+  background-color: @dark-blue;
+}
+
+.button:focus {
+  background-color: @very-dark-blue;
+}
+
+.button:active a,
+.button:focus a {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 @media (min-width: @tablet-width) {
   .button {
     width: 458px;
