--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,4 +1,7 @@
 .contacts {
+  width: auto;
+  margin-top: 23px;
+  padding: 20px 17.5px 28px;
   border: none;
 }
 
@@ -12,19 +15,113 @@
 }
 
 .contacts__tel {
-  font-size: @medium-font;
-  font-weight: 400;
-  line-height: 26px;
-  text-align: left;
-  text-transform: uppercase;
-  color: #333333;
+  display: inline-block;
+  width: auto;
+  height: 96px;
+  margin: 0;
+  padding: 0;
+  outline: 1px solid #142aa8;
 }
 
-.contacts__email {
+.contacts__tel-text {
+  width: 280px;
+  height: 58px;
+  margin: 0;
+  margin-left: 22px;
+  padding: 0;
+
   font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
   text-transform: uppercase;
-  color: #333333;
+  color: #000000;
+
+  outline: 1px solid #a81414;
+}
+
+.contacts__tel-wrap {
+  display: inline-block;
+  width: 280px;
+  height: 58px;
+  margin: 0;
+  margin-top: 4px;
+  padding: 0;
+
+  background-color: @gray;
+}
+
+.contacts__tel-input {
+  width: 175px;
+  height: 58px;
+  margin: 0;
+  margin-left: 23px;
+  padding: 0;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-align: left;
+  color: #000000;
+
+  background-color: @gray;
+  border: none;
+  cursor: pointer;
+  outline: 1px solid #14a84d;
+}
+
+.contacts__email {
+  display: inline-block;
+  width: auto;
+  height: 96px;
+  margin: 0;
+  padding: 0;
+  outline: 1px solid #142aa8;
+}
+
+.contacts__email-text {
+  width: 280px;
+  height: 58px;
+  margin: 0;
+  margin-left: 22px;
+  padding: 0;
+
+  font-size: @little-font;
+  font-weight: 400;
+  line-height: 26px;
+  text-align: left;
+  text-transform: uppercase;
+  color: #000000;
+
+  outline: 1px solid #a81414;
+}
+
+.contacts__email-wrap {
+  display: inline-block;
+  width: 280px;
+  height: 58px;
+  margin: 0;
+  margin-top: 4px;
+  padding: 0;
+
+  background-color: @gray;
+}
+
+.contacts__email-input {
+  width: 175px;
+  height: 58px;
+  margin: 0;
+  margin-left: 23px;
+  padding: 0;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-align: left;
+  color: #000000;
+
+  background-color: @gray;
+  border: none;
+  cursor: pointer;
+  outline: 1px solid #14a84d;
 }
