--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -18,6 +18,20 @@
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3);
 }
 
+.site-list__item:hover {
+  background-color: @dark-blue;
+}
+
+.site-list__item:active,
+.site-list__item:focus {
+  background-color: @very-dark-blue;
+}
+
+.site-list__item:active a,
+.site-list__item:focus a {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .site-list__item-top {
   position: relative;
   text-align: right;
@@ -52,6 +66,18 @@
   .site-list__item a {
     font-size: @little-font;
     color: #000000;
+  }
+
+  .site-list__item a:hover {
+    color: @blue;
+  }
+
+  .site-list__item a:active {
+    color: @brown;
+  }
+
+  .site-list__item a:focus {
+    color: rgba(0, 0, 0, 0.3);
   }
 
   .site-list__item-down {
