--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -49,6 +49,15 @@
   background-image: url("../img/icon-youtube.svg");
 }
 
+.social__item:hover {
+  background-color: @dark-blue;
+}
+
+.social__item:active,
+.social__item:focus {
+  background-color: @very-dark-blue;
+}
+
 @media (min-width: @tablet-width) {
   .social__list {
     margin: 0;
