--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,4 +1,8 @@
 @blue: #81b3d2;
+@brown: #766357;
+@dark-blue: #669ce0;
+@very-dark-blue:#5496bd;
+@gray:#f2f2f2;
 @little-font: 14px;
 @medium-font: 18px;
 @large-font: 21px;
